[DPEDE-6268] Added initial overflow to prevent cutting info icon popover

--- a/src/chi/components/save-views/save-views.scss
+++ b/src/chi/components/save-views/save-views.scss
@@ -3,6 +3,8 @@
 
 .chi-save-views {
   .chi-modal {
+    overflow: initial;
+
     .chi-modal__content {
       .chi-form__item:has(chi-text-input) {
         margin-bottom: $save-views-modal-form-item-margin-bottom;
